--- a/07.slide/style.css
+++ b/07.slide/style.css
@@ -33,6 +33,28 @@ ul {
   font-weight: bold;
 }
 
+/* slide */
+.slider {
+  position: relative;
+}
+
+.btns {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 100%;
+  padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.btns img {
+  width: 46px;
+  cursor: pointer;
+  filter: brightness(50%);
+}
+
 .slide_01 .item {
   height: 560px;
   background-repeat: no-repeat;
@@ -50,6 +72,46 @@ ul {
 
 .slide_01 .item.item_03 {
   background-image: url('../images/slide_03.jpg');
+}
+
+/* slick_custom */
+.slide_01 .slick-dots {
+  bottom: 20px;
+}
+
+.slide_01 .slick-dots li {
+  width: initial;
+}
+
+.slide_01 .slick-dots li button {
+  background-color: black;
+  width: 16px;
+  height: 16px;
+  opacity: 0.2;
+  border-radius: 16px;
+  transition: width 0.3;
+}
+.slide_01 .slick-dots li button::before {
+  display: none;
+}
+.slide_01 .slick-dots li.slick-active button {
+  opacity: 0.7;
+  width: 60px;
+}
+
+.slide_01 .slick-prev {
+  left: 25px;
+  z-index: 100;
+}
+.slide_01 .slick-next {
+  right: 25px;
+  z-index: 100;
+}
+
+.slide_01.slick-prev:before,
+.slide_01.slick-next:before {
+  font-size: 40px;
+  color: #666;
 }
 
 /* .main */
