--- a/07.slide/style2.css
+++ b/07.slide/style2.css
@@ -24,14 +24,26 @@ ul {
   left: 0;
   z-index: 1;
   width: 100%;
-  background-color: rgba(225, 225, 225, 0);
-  transition: height 0.3s, background-color 0.3s;
+  background-color: #fff;
+  overflow: hidden;
 }
 
-.header.on {
-  height: 60px;
-  background-color: rgba(225, 225, 225, 0.9);
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+.header::after {
+  content: '';
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.15);
+  z-index: 100;
+  pointer-events: none;
+}
+
+.header h1,
+.header .user {
+  height: 80px;
+  line-height: 80px;
 }
 
 .header .nav {
@@ -63,8 +75,6 @@ ul {
   width: 150px;
   z-index: 100;
   background-color: #fff;
-  border: 1px solid #ddd;
-  display: none;
 }
 
 .header.on .nav ul {
@@ -76,10 +86,11 @@ ul {
   text-align: center;
   padding: 16px 0;
   white-space: nowrap;
+  font-size: 14px;
 }
 
-.header .nav ul li:hover {
-  background-color: #eee;
+.header .nav ul li a:hover {
+  text-decoration: underline;
 }
 
 .header .user {
