--- a/07.slide/style2.css
+++ b/07.slide/style2.css
@@ -3,21 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 a {
   text-decoration: none;
   color: inherit;
 }
-
 ul {
   list-style: none;
 }
 
 .header {
   display: flex;
-  height: 80px;
-  align-items: center;
   justify-content: space-between;
+  height: 80px;
   padding: 0 30px;
   position: fixed;
   top: 0;
@@ -58,13 +55,12 @@ ul {
   padding: 0 40px;
 }
 
-.header.on .nav > li > a {
-  height: 60px;
-  line-height: 60px;
-}
-
 .header .nav > li {
   position: relative;
+}
+
+.header .nav > li:hover > a {
+  color: orangered;
 }
 
 .header .nav ul {
@@ -130,11 +126,9 @@ ul {
 .slide_01 .item.item_01 {
   background-image: url('../images/slide_01.jpg');
 }
-
 .slide_01 .item.item_02 {
   background-image: url('../images/slide_02.jpg');
 }
-
 .slide_01 .item.item_03 {
   background-image: url('../images/slide_03.jpg');
 }
@@ -147,14 +141,13 @@ ul {
 .slide_01 .slick-dots li {
   width: initial;
 }
-
 .slide_01 .slick-dots li button {
-  background-color: black;
+  background-color: #000;
   width: 16px;
   height: 16px;
-  opacity: 0.2;
   border-radius: 16px;
-  transition: width 0.3;
+  opacity: 0.2;
+  transition: width 0.3s;
 }
 .slide_01 .slick-dots li button::before {
   display: none;
@@ -173,8 +166,8 @@ ul {
   z-index: 100;
 }
 
-.slide_01.slick-prev:before,
-.slide_01.slick-next:before {
+.slide_01 .slick-prev:before,
+.slide_01 .slick-next:before {
   font-size: 40px;
   color: #666;
 }
@@ -191,7 +184,7 @@ ul {
   width: 100%;
 }
 
-/* .main */
+/* main */
 .main {
   max-width: 1000px;
   padding: 60px 16px;
@@ -223,4 +216,18 @@ ul {
   right: 20px;
   bottom: 20px;
   display: none;
+}
+
+.dimm {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0);
+  transition: all 0.3s;
+}
+
+.dimm.active {
+  background-color: rgba(0, 0, 0, 0.75);
 }
